@@ -1,0 +1,9 @@
+use strict;
+use warnings;
+
+use Tags::HTML::Element::Form::Items;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
+
+# Test.
+is($Tags::HTML::Element::Form::Items::VERSION, 0.03, 'Version.');
