@@ -1,4 +1,5 @@
 0.03
+ - Add Form/Items class.
  - Add Item class.
  - Add Option tests.
  - Add doc for Utils.
